# sdkman-mcp

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  README.zh-CN.md  pyproject.toml  setup.py
examples/: install_jdk.py  install_sdk.py
src/sdkman_mcp/: __init__.py  __main__.py  sdk_commands.py  server.py
